c4-igw.tf
resource "aws_internet_gateway" "igw" { 
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "igw"
  }
}
